# discord-cli

./: Cargo.toml  TODO.md
src/: main.rs
