cargo-features = ["edition2024"]
[package]
name = "discord-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
